Столько нового и интересного...

--- a/WorkingWithVisualStudio/Views/Home/Index.cshtml
+++ b/WorkingWithVisualStudio/Views/Home/Index.cshtml
@@ -6,9 +6,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Working With Visual Studio</title>
+    <link rel="stylesheet" href="~/lib/css/bundle.min.css" />
+    <script src="~/lib/js/bundle.min.js"></script>
 </head>
 <body>
-
+    <h3>Products</h3>
+    <p>Request Time: @DateTime.Now.ToString("HH:mm:ss")</p>
     <table>
         <thead>
             <tr>
