--- a/WorkingWithVisualStudio/Views/Home/Index.cshtml
+++ b/WorkingWithVisualStudio/Views/Home/Index.cshtml
@@ -6,13 +6,11 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Working With Visual Studio</title>
-    <link rel="stylesheet" href="~/lib/css/bundle.min.css" />
-    <script src="~/lib/js/bundle.min.js"></script>
+    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
 </head>
-<body>
-    <h3>Products</h3>
-    <p>Request Time: @DateTime.Now.ToString("HH:mm:ss")</p>
-    <table>
+<body class="p-1">
+    <h3 class="text-center">Products</h3>
+    <table class="table table-bordered table-striped">
         <thead>
             <tr>
                 <th>Name</th>
@@ -29,6 +27,10 @@
             }
         </tbody>
     </table>
+
+    <div class="text-center">
+        <a class="btn btn-primary" asp-action="AddProduct">Добавить новый продукт</a>
+    </div>
 
 </body>
 </html>
